--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>De La Salle College Colombo 15 | Our New College Website Has Been Launched </title>
-    <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <!--Style starts-->
+    <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/scroll.css">
+    <link rel="stylesheet" type="text/css" href="../css/waves.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-
 <body>
 <!-- Start Your Body Code From here -->
 <div class="wrapper">
@@ -257,61 +258,63 @@ background: #fff;
         </div>
     </div>
     </div>
-    <!-- Footer -->
-    <footer>
-        <div class="footer-wrapper">
-            <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
-            <div class="row">
-                <div class="col-sm-4 address">
-                    <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
+   <!-- Footer -->
+   <footer>
+    <div class="footer-wrapper">
+        <span class="logo"><img src="../img/IIITV_Logo_1x1_small.png" alt=""></span>
+        <div class="row">
+            <div class="col-sm-4 address">
+                <strong>Address : </strong> 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
+            </div>
+            <div class="col-sm-4 links">
+                <div>
+                    <a href="../index.html#news">News</a>
+                    <i class="seperator"></i>
+                    <a href="../index.html#announcements">Announcement</a>
+                    <i class="seperator"></i>
+                    <a href="../index.html#events">Events</a>
                 </div>
-                <div class="col-sm-4 links">
-                    <div>
-                        <a href="index.html#news">News</a>
-                        <i class="seperator"></i>
-                        <a href="index.html#announcements">Announcement</a>
-                        <i class="seperator"></i>
-                        <a href="index.html#events">Events</a>
-                    </div>
-                    <div>
-                        <a href="index.html">Home</a>
-                        <i class="seperator"></i>
-                        <a href="rti.html">RTI</a>
-                        <i class="seperator"></i>
-                        <a href="pdf/MOU.pdf">MOU</a>
-                    </div>
-                    <div>
-                        <a href="admissions.html">Admission</a>
-                        <i class="seperator"></i>
-                        <a href="student_corner.html">Student</a>
-                        <i class="seperator"></i>
-                        <a href="faculty.html">Faculty</a>
-                    </div>
+                <div>
+                    <a href="../index.html">Home</a>
+                    <i class="seperator"></i>
+                    <a href="../rti.html">RTI</a>
+                    <i class="seperator"></i>
+                    <a href="../pdf/MOU.pdf">MOU</a>
                 </div>
-                <div class="col-sm-4 footer-social">
-                    <a href="#!"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
-                    <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
-                                                          title="Github Group"></i></a>
-                    <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
-                    <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
-                                             title="Official Twitter Account"></i></a>
+                <div>
+                    <a href="../admissions.html">Admission</a>
+                    <i class="seperator"></i>
+                    <a href="../student_corner.html">Student</a>
+                    <i class="seperator"></i>
+                    <a href="../faculty.html">Faculty</a>
                 </div>
             </div>
+            <div class="col-sm-4 footer-social">
+                <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
+                                title="Official Facebook Page"></i></a>
+                <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                                                      title="Github Group"></i></a>
+                <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
+                <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
+                                         title="Official Twitter Account"></i></a>
+            </div>
         </div>
-    </footer>
+    </div>
+</footer>
 </div>
 <!--Scripts Starts-->
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://use.fontawesome.com/434d359724.js"></script>
 <script>
-    $(document).ready(function () {
-        $('[data-toggle="popover"]').popover();
-        $('[data-toggle="popover"]').on('click', function (e) {
-            $('[data-toggle="popover"]').not(this).popover('hide');
-        });
-    });
+$(document).ready(function() {
+$('[data-toggle="popover"]').popover();
+$('[data-toggle="popover"]').on('click', function(e) {
+    $('[data-toggle="popover"]').not(this).popover('hide');
+});
+});
 </script>
 </body>
 
 </html>
+
