--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="../css/scroll.css">
         <link rel="stylesheet" type="text/css" href="../css/waves.min.css">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
-    </head
+    </head>
 
     <body>
         <!-- Start Your Body Code From here -->
