--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                                                 <p>Dec</p>
                                             </div></div>
                                             <div class="news-grid-txt">
-                                                <span>BLOG</span>
+                                                <span>NEWS</span>
                                                 <h2>Our New College Website Has Been Launched</h2>
                                                 <ul>
                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
@@ -895,7 +895,7 @@
                                                     <p>Sep</p>
                                                 </div></div>
                                                 <div class="news-grid-txt">
-                                                    <span>Finacne</span>
+                                                    <span>ALUMNI</span>
                                                     <h2>Heading Will Be Here</h2>
                                                     <ul>
                                                         <li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 24, 2020</li>
