--- a/blog1.html
+++ b/blog1.html
@@ -41,7 +41,9 @@
 }
 </style>
 
+
 <body>
+    <div class="loader" style="display: none;"></div>
     <!-- Start Your Body Code From here -->
     <div class="wrapper">
         <!-- header starts here -->
@@ -678,6 +680,18 @@
 	color: #fff;
 	letter-spacing: 2px;
 	transition: .5s;
+}
+element.style {
+    display: none;
+}
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(gif/wave-flag\ animation1.gif) 50% 50% no-repeat rgb(255 255 255);
 }
         </style>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
