--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT COLLEGE<b
                                             class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="about.html">OVERVIEW</a></li>
+                                        <li class="active"><a href="about.html">OVERVIEW</a></li>
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE IDENTITY</a>
                                             <ul class="dropdown-menu">
