updated navigation section list

--- a/The-Coat-of-Arms.html
+++ b/The-Coat-of-Arms.html
@@ -57,44 +57,67 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li class="active">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b class="caret"></b></a>
+                                <li><a href="index.html">HOME</a></li>
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT COLLEGE<b
+                                        class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="about.html">OVERVIEW</a></li>
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE IDENTITY</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Identity/mission-vision.html">Vision & Mission</a></li>
-                                            <li><a href="Identity/college-motto-and-flag_colours.html">Flag</a></li>
-                                            <li><a href="Identity/college-crest.html">Crest</a></li>
-                                            <li><a href="college-anthem.html">College Anthem</a></li>
+                                            <li><a href="Identity/mission-vision.html">COLLEGE VISION & MISSION</a></li>
+                                            <li><a href="Identity/college-motto-and-flag_colours.html">COLLEGE FLAG | MOTTO | COLOURS</a></li>
+                                            <li><a href="Identity/college-crest.html">COLLEGE CREST</a></li>
+                                            <li><a href="college-anthem.html">COLLEGE ANTHEM</a></li>
                                         </ul>
                                     </li>
-                                    
-                                    <li class="dropdown-submenu active">
+                                    <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="History-and-Location.html">History of College</a></li>
-                                            <li class="active"><a href="The-Coat-of-Arms.html">The-Coat-of-Arm</a></li>
-                                            <li><a href="Chronoloy-College-History.html">Chronology College History</a></li>
-                                            <li><a href="College-Directors.html">Past Rectors</a></li>
+                                            <li><a href="History-and-Location.html">HISTORY OF COLLEGE</a></li>
+                                            <li><a href="BRIEF-HISTORY.html">BRIEF HISTORY OF DE LA SALLE</a></li>
+                                            <li><a href="Chronoloy-College-History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
+                                            <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
+                                            <li><a href="College-Directors.html">PAST PRINCIPALS</a></li>
+                                            <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
 
-                                    <li><a href="directors_message.html">Director's Message</a></li>
-                                    <li><a href="College-Directors.html">College Directors</a></li>
-                                    <li><a href="Chronology College History.html">Chronology College History</a></li>
-                                    <li><a href="Academics.php.html">Academic Council</a></li>
-                                    <li><a href="Academic-Progress.html">Academic Progress</a></li>
-                                    <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
-                                    <li><a href="The-Coat-of-Arms.html">The Coat of Arms o  the  De La Salle  Brothers</a></li>
-                                    <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
+                                    <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
+                                    <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a>
+                                    </li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE FACILITIES</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="Physical-Facilities.html">Physical Facilities</a></li>
+                                            <li><a href="BRIEF-HISTORY.html">1</a></li>
+                                            <li><a href="Chronoloy-College-History.html">2</a></li>
+                                            <li><a href="The-Coat-of-Arms.html">2</a></li>
+                                            <li><a href="College-Directors.html">t</a></li>
+                                            <!--li><a href="Identity/tcs.html">TCS</a></li-->
+                                        </ul>
+                                    </li>
+                                    <!--li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li-->
+                                    <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
+                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
+                                    <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">BRIDGE BETWEEN THE COLLEGE AND THE OLD-BOYS</a></li>
                                     
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Academics <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="Organizational-Structure.html">OVERVIEW</a></li>
+                                    <li><a href="directors_message.html">PRINCIPAL</a></li>
+                                    <li><a href="Under_Construction.html">DEPUTY PRINCIPAL</a></li>
+                                    <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
+                                </ul>
+                            </li>
+
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACADEMICS <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
@@ -116,12 +139,14 @@
                                                 <li><a href="Under_Construction.html">admissions</a></li>
                                             </ul>
                                     </li>
+                                    <li><a href="Academic-Progress.html">ACADEMIC PROGRESS</a></li>
+                                    <li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li>
                                     <!--li><a href="#">More</a></li-->
-                                    <li><a href="Under_Construction.html">Academic Calender</a></li>
+                                    <li><a href="Under_Construction.html">NON ACADEMIC</a></li>
 
                                 </ul>
                             </li>
-                            <li>
+                            <!--li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
@@ -129,9 +154,9 @@
                                     <li><a href="Under_Construction.html">Deputy Principal</a></li>
                                     <li><a href="Under_Construction.html">Academic Staff</a></li>
                                 </ul>
-                            </li>
-                            <li>
-                                <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OBU <b class="caret"></b></a>
+                            </li-->
+                            <!--li>
+                                <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="obu.html">Overview</a></li>
                                     <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
@@ -141,11 +166,42 @@
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
-                            </li>
+                            </li-->
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
+                                    <li><a href="Co-curiiicular-Activities.html">CURRICULAR ACTIVITIES</a></li>
+                                    <li><a href="Sports-and-Games.html">Sports & Games</a></li>
+                                    <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
+                                    <li><a href="announcements.html">Announcements</a></li>
+                                    <li><a href="view-events.html">News & Events</a></li>
+                                    <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
+                                </ul>
+                            </li>
+                            <!--li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="announcements.html">Announcements</a></li>
+                                    <li><a href="view-events.html">News & Events</a></li>
+                                    <li><a href="Activities-in-Development-Stage.html">Activities-in-Development-Stage</a></li>
+                                    <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
+                                    <li><a href="Under_Construction.html">Student's Corner</a></li>
+                                    <li><a href="Under_Construction.html" target="_blank">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                </ul>
+                            </li-->
+                            <li><a href="gallery.html">GALLERY</a></li>
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="announcements.html">Announcements</a></li>
+                                    <li><a href="view-events.html">News & Events</a></li>
+                                    <li><a href="Activities-in-Development-Stage.html">Activities-in-Development-Stage</a></li>
                                     <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
                                     <li><a href="Under_Construction.html">Student's Corner</a></li>
                                     <li><a href="Under_Construction.html" target="_blank">Coming soon</a></li>
@@ -154,7 +210,7 @@
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li>
-                            <li><a href="gallery.html">Photo Gallery</a></li>
+                            <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
