--- a/Sports-and-Games.html
+++ b/Sports-and-Games.html
@@ -221,7 +221,7 @@
     <!-- /header -->
     <div style="text-align: center;">
         <a href="#" target="_blank"-->
-            <img class="responsive-img" src="Sports and College Activities/Main Sports Banner.jpg">
+            <img class="responsive-img" src="College Assests/Sports-Activities Banner Landscape.png">
         </a>
 </div>
     <section>
