--- a/Sports-and-Games.html
+++ b/Sports-and-Games.html
@@ -220,7 +220,7 @@
         </nav>
     </header>
     <!-- /header -->
-    <div style="text-align: center;">
+    <!--div style="text-align: center;">
         <a href="#" target="_blank"-->
             <img class="responsive-img" src="Sports and College Activities/Sports-Activities Banner Landscape.jpg">
         </a>
