--- a/School-Layout-Plan.html
+++ b/School-Layout-Plan.html
@@ -221,7 +221,7 @@
         </nav>
     </header>
     <!-- /header -->
-    <div style="text-align: center;">
+    <!--div style="text-align: center;">
         <a href="#" target="_blank"-->
             <img class="responsive-img" src="College Assests/Section Banner Landscape.jpg">
         </a>
