--- a/deputy-principal.html
+++ b/deputy-principal.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Principal's Message | De La Salle College, Colombo - “Indivisa Manent”</title>
+    <title>Deputy Principal's Message | De La Salle College, Colombo - “Indivisa Manent”</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -219,13 +219,12 @@
             <!-- Contents starts here -->
             <div class="content dir-msg">
                 <div class="dir-detail">
-                    <img class="responsive-img circle" src="Administration/Bro. R. Joseph Jeyakanthan.jpg">
-                    <div>Bro. R. Joseph Jeyakanthan</div>
+                    <img class="responsive-img circle" src="Administration/Mr.Susantha Devarathnayaka.jpg">
+                    <div>Mr.Susantha Devarathnayaka</div>
                     <div>
-                        Director DLS
+                        Deputy Principal
                     </div>
                     <div>
-                        Mentor Director DLS
                     </div>
                 </div>
                 <div class="dir-text">
