--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="Organizational-Structure.html">OVERVIEW</a></li>
                                     <li><a href="directors_message.html">PRINCIPAL</a></li>
-                                    <li><a href="Under_Construction.html">DEPUTY PRINCIPAL</a></li>
+                                    <li><a href="deputy-principal.html">DEPUTY PRINCIPAL</a></li>
                                     <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
                                 </ul>
                             </li>
