--- a/blog1.html
+++ b/blog1.html
@@ -532,7 +532,9 @@
                             </div>
                     </div>
                 </div>
+</body>
                 </section>
+</html>
                 <link
                 rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
