--- a/blog1.html
+++ b/blog1.html
@@ -558,12 +558,12 @@ body {
 
 
 .container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #bacad9;
+    /* width: 100%; */
+    /* height: 100vh; */
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* background-color: #bacad9; */
 }
 
 .card {
