--- a/blog1.html
+++ b/blog1.html
@@ -566,17 +566,17 @@ body {
     /* background-color: #bacad9; */
 }
 
-.card {
-  width: 360px;
-  height: 262px;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  padding-top: 25px;
-  cursor: pointer;
-  justify-content: space-between;
-  padding-bottom: 15px;
+card {
+  /* width: 360px; */
+  /* height: 262px; */
+  /* background-color: #fff; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* border-radius: 10px; */
+  /* padding-top: 25px; */
+  /* cursor: pointer; */
+  /* justify-content: space-between; */
+  /* padding-bottom: 15px; */
 }
 
 .card-header {
