--- a/blog1.html
+++ b/blog1.html
@@ -625,15 +625,15 @@ card {
 }
 
 .social-buttons {
-  width: 100%;
+  width: auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .social-buttons button {
-  width: 40px;
-  height: 40px;
+  width: auto;
+  height: auto;
   border: 1px solid transparent;
   border-radius: 50%;
   font-size: 23px;
