--- a/blog1.html
+++ b/blog1.html
@@ -580,9 +580,10 @@ card {
 }
 
 .card-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .avatar {
   width: 100px;
