--- a/blog1.html
+++ b/blog1.html
@@ -612,13 +612,13 @@ card {
 .profile-name h1 {
   font-size: 28px;
   font-weight: 500;
+  text-align: center;
 }
 .profile-role {
   color: #6d6d6d;
 }
 
-.card-footer {
-}
+
 
 .social-buttons {
   width: auto;
