--- a/blog1.html
+++ b/blog1.html
@@ -206,11 +206,12 @@
             }
             
             .card {
-              padding: 94px;
-              background: #fff;
-              max-width: 1288px;
-              border-radius: 20px;
-              margin: 60px auto;
+    padding: 94px;
+    /* background: #fff; */
+    /* max-width: 1288px; */
+    border-radius: 20px;
+    /* margin: 60px auto; */
+}
               /*color: #fff;
   backdrop-filter: blur(10px);***/
 }
