--- a/blog1.html
+++ b/blog1.html
@@ -645,11 +645,11 @@ card {
                     <div class="avatar">
                       <div class="user-online-indicator"></div>
                       <img
-                        src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
+                        src="https://www.kasuncfernando.tk/images/avatar.jpg"
                         alt="user-image"
                       />
                     </div>
-                    <div class="profile-name"><h1>Aiony Haust</h1></div>
+                    <div class="profile-name"><h1>Kasun</h1></div>
                     <div class="profile-role">Frontend developer</div>
                   </div>
           
