--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -182,8 +182,7 @@ touch-action: pan-y;
 }
 body {
 color: #262626;
-font-family: Noto Sans Sinhala,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-font-family: "Poppins", sans-serif;
+font-family: Noto Sans Sinhala,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,Poppins, sans-serif;
 font-size: 1.5rem;
 line-height: 1.6em;
 font-weight: 400;
