--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -182,7 +182,7 @@ touch-action: pan-y;
 }
 body {
 color: #262626;
-font-family: Noto Sans Sinhala,-apple-system,Poppins, sans-serif;
+font-family: Noto Sans Sinhala,Poppins, sans-serif;
 font-size: 1.5rem;
 line-height: 1.6em;
 font-weight: 400;
