--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -181,6 +181,8 @@ touch-action: pan-y;
 -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
 color: #262626;
 font-family: Noto Sans Sinhala,Poppins, sans-serif;
 font-size: 1.5rem;
