--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -181,10 +181,8 @@ touch-action: pan-y;
 -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-
 color: #262626;
-font-family: Noto Sans Sinhala,Poppins, sans-serif;
+font-family: Poppins, sans-serif;
 font-size: 1.5rem;
 line-height: 1.6em;
 font-weight: 400;
@@ -231,6 +229,8 @@ line-height: 1;
 --darkBackgroundDark: #222;
 }
 {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
 @media (max-width: 1170px)
 .post-full-content {
 padding: 5vw 9vw;
