--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" type="text/css" href="../css/scroll.css">
     <link rel="stylesheet" type="text/css" href="../css/waves.min.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -182,7 +181,7 @@ touch-action: pan-y;
 }
 body {
 color: #262626;
-font-family: Poppins, sans-serif;
+font-family: Noto Sans Sinhala,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 font-size: 1.5rem;
 line-height: 1.6em;
 font-weight: 400;
@@ -229,8 +228,6 @@ line-height: 1;
 --darkBackgroundDark: #222;
 }
 {
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-
 @media (max-width: 1170px)
 .post-full-content {
 padding: 5vw 9vw;
