--- a/blog1.html
+++ b/blog1.html
@@ -855,69 +855,71 @@ tl.from(".social-buttons",{
 
         </style>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
-		<div class="news-wrap">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="news-grid">
-							<div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
-								<div class="news-grid-box">
-									<h1>19</h1>
-									<p>Sep</p>
-								</div></div>
-								<div class="news-grid-txt">
-									<span>Finacne</span>
-									<h2>Heading Will Be Here</h2>
-									<ul>
-										<li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 19, 2020</li>
-										<li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
-									</ul>
-									<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-									<a href="#">Read More...</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="news-grid">
-								<div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
-									<div class="news-grid-box">
-										<h1>20</h1>
-										<p>Sep</p>
-									</div></div>
-									<div class="news-grid-txt">
-										<span>Finacne</span>
-										<h2>Heading Will Be Here</h2>
-										<ul>
-											<li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 20, 2020</li>
-											<li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
-										</ul>
-										<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-										<a href="#">Read More...</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4">
-								<div class="news-grid">
-									<div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
-										<div class="news-grid-box">
-											<h1>24</h1>
-											<p>Sep</p>
-										</div></div>
-										<div class="news-grid-txt">
-											<span>Finacne</span>
-											<h2>Heading Will Be Here</h2>
-											<ul>
-												<li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 24, 2020</li>
-												<li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
-											</ul>
-											<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-											<a href="#">Read More...</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+		<div class="widgets-wrapper">
+            <div class="news-wrap">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-4 col-lg-4 m-15px-tb">
+                                    <div class="news-grid">
+                                        <div class="news-grid-image"><img src="News and Events/Main-Thumbsmod.jpg" alt="">
+                                            <div class="news-grid-box">
+                                                <h1>11</h1>
+                                                <p>May</p>
+                                            </div></div>
+                                            <div class="news-grid-txt">
+                                                <span>EVENTS</span>
+                                                <h2>The Kingdom by the sea turns 116th years</h2>
+                                                <ul>
+                                                    <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
+                                                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                                </ul>
+                                                <p>Today marks 116 years since De La Salle College, Colombo, was founded on February 1, 1095.</p>
+                                                <a href="https://www.facebook.com/DeLaSalleCollegeColombo/">Read More...</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 col-lg-4 m-15px-tb">
+                                        <div class="news-grid">
+                                            <div class="news-grid-image"><img src="img/dlsd.jpg" alt="">
+                                                <div class="news-grid-box">
+                                                    <h1>11</h1>
+                                                    <p>Dec</p>
+                                                </div></div>
+                                                <div class="news-grid-txt">
+                                                    <span>NEWS</span>
+                                                    <h2>Our New College Website Has Been Launched</h2>
+                                                    <ul>
+                                                        <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
+                                                        <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                                    </ul>
+                                                    <p>we are so excited to announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
+                                                    <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 col-lg-4 m-15px-tb">
+                                            <div class="news-grid">
+                                                <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
+                                                    <div class="news-grid-box">
+                                                        <h1>24</h1>
+                                                        <p>Sep</p>
+                                                    </div></div>
+                                                    <div class="news-grid-txt">
+                                                        <span>ALUMNI</span>
+                                                        <h2>Heading Will Be Here</h2>
+                                                        <ul>
+                                                            <li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 24, 2020</li>
+                                                            <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                                        </ul>
+                                                        <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+                                                        <a href="#">Read More...</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div></div>
+                                
                 </br>
         </br>
     </br>
