--- a/blog1.html
+++ b/blog1.html
@@ -822,16 +822,16 @@ tl.from(".social-buttons",{
 }
 
 .news-grid-txt a {
-	color: #fff;
-	background: #26ccca;
-	padding: 8px 20px;
-	border-radius: 50px;
-	font-size: 14px;
-	font-weight: 300;
-	line-height: 30px;
-	letter-spacing: 1px;
-	text-decoration-line: none;
-	transition: .5s;
+    color: #fff;
+    background: #0a0b3b;
+    padding: 8px 20px;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 30px;
+    letter-spacing: 1px;
+    text-decoration-line: none;
+    transition: .5s;
 }
 
 /*Hover-Section*/
