--- a/blog1.html
+++ b/blog1.html
@@ -744,7 +744,7 @@ tl.from(".social-buttons",{
 	display: block;
 	position: absolute;
 	text-align: center;
-	background: #26ccca;
+	background: #0a0b3b;
 	left: -80px;
 	top: 15px;
 	padding: 10px;
@@ -773,7 +773,7 @@ tl.from(".social-buttons",{
 }
 
 .news-grid-txt span {
-	color: #26ccca;
+	color: #0a0b3b;
 	font-size: 13px;
 	font-weight: 500;
 	letter-spacing: 4px;
@@ -804,7 +804,7 @@ tl.from(".social-buttons",{
 }
 
 .news-grid-txt ul li i {
-	color: #26ccca;
+	color: #0a0b3b;
 	font-size: 14px;
 	font-weight: 500;
 	margin-right: 5px;
