--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -276,7 +276,398 @@ margin: -5vw -9vw 2vw;
             
         </div>
     </div>
+    <section>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+</head>
+<style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+body {
+font-family: "Poppins", sans-serif;
+}
+
+
+.container {
+/* width: 100%; */
+/* height: 100vh; */
+/* display: flex; */
+/* align-items: center; */
+/* justify-content: center; */
+/* background-color: #bacad9; */
+}
+
+card {
+/* width: 360px; */
+/* height: 262px; */
+/* background-color: #fff; */
+/* display: flex; */
+/* flex-direction: column; */
+/* border-radius: 10px; */
+/* padding-top: 25px; */
+/* cursor: pointer; */
+/* justify-content: space-between; */
+/* padding-bottom: 15px; */
+}
+
+.card-header {
+display: flex;
+flex-direction: column;
+align-items: center;
+flex-wrap: wrap;
+}
+.avatar {
+width: 100px;
+height: 100px;
+position: relative;
+}
+
+.user-online-indicator {
+width: 15px;
+height: 15px;
+background-color: #53f45a;
+position: absolute;
+bottom: 10px;
+right: 8px;
+border-radius: 50%;
+z-index: 4;
+}
+
+.avatar img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+border-radius: 50%;
+}
+
+.profile-name h1 {
+font-size: 28px;
+font-weight: 500;
+text-align: center;
+}
+.profile-role {
+color: #6d6d6d;
+}
+
+
+
+.social-buttons {
+width: auto;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.social-buttons button {
+width: auto;
+height: auto;
+border: 1px solid transparent;
+border-radius: 50%;
+font-size: 23px;
+margin: 0 20px;
+}
+
+</style>
+<body>
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <div class="avatar">
+          <div class="user-online-indicator"></div>
+          <img
+            src="https://www.kasuncfernando.tk/images/avatar.jpg"
+            alt="user-image"
+          />
+        </div>
+        <div class="profile-name"><h1>Kasun</h1></div>
+        <div class="profile-role">Frontend developer</div>
+      </div>
+
+      <div class="card-footer">
+        <div class="social-buttons">
+          <button>
+            <i class="fab fa-instagram"></i>
+          </button>
+
+          <button>
+            <i class="fab fa-twitter"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+  <script>
+      let tl = gsap.timeline();
+
+console.log("New");
+
+tl.from(".card", {
+stagger: 0.2,
+opacity: 0,
+x: -20,
+});
+
+tl.from(".avatar img", {
+stagger: 0.2,
+opacity: 0,
+y: 20,
+});
+
+tl.from(".user-online-indicator",{
+stagger: 0.2,
+opacity: 0,
+y: 20,
+})
+tl.from(".profile-name",{
+stagger: 0.2,
+opacity: 0,
+y: 20,
+})
+tl.from(".profile-role",{
+stagger: 0.2,
+opacity: 0,
+y: 20,
+})
+
+tl.from(".social-buttons",{
+stagger: 0.2,
+opacity: 0,
+})
+
+  </script>  
+        <p></p>
+
+        <p></p>
+
+        <p></p>
+
+        <p></p>
+</div>
+</div>
+<style>
+
+.news-grid {
+position: relative;
+background: #fff;
+border-radius: 5px;
+overflow: hidden;
+box-shadow: 0px 10px 30px 0px rgba(50, 50, 50, 0.16);
+margin: 10px 0px 10px 0px;
+}
+
+.news-grid-image {
+width: 100%;
+height: 280px;
+overflow: hidden;
+}
+
+.news-grid-image img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+transition: .5s;
+}
+
+.news-grid-box {
+display: block;
+position: absolute;
+text-align: center;
+background: #0a0b3b;
+left: -80px;
+top: 15px;
+padding: 10px;
+transition: .5s;
+}
+
+.news-grid-box h1 {
+color: #fff;
+font-size: 30px;
+font-weight: 400;
+letter-spacing: 2px;
+padding-bottom: 5px;
+border-bottom: 1px solid rgba(255, 255, 255, .3);
+margin-bottom: 5px;
+}
+
+.news-grid-box p {
+color: #fff;
+font-size: 14px;
+font-weight: 400;
+margin-bottom: 0px;
+}
+
+.news-grid-txt {
+padding: 25px;
+}
+
+.news-grid-txt span {
+color: #0a0b3b;
+font-size: 13px;
+font-weight: 500;
+letter-spacing: 4px;
+text-transform: uppercase;
+}
+
+.news-grid-txt h2 {
+color: #111;
+font-size: 20px;
+font-weight: 500;
+letter-spacing: 1px;
+margin: 10px 0px 5px 0px;
+}
+
+.news-grid-txt ul {
+padding: 0;
+margin: 0;
+}
+
+.news-grid-txt ul li {
+list-style: none;
+display: inline-block;
+color: #999;
+font-size: 14px;
+font-weight: 300;
+margin: 8px 10px 8px 0px;
+letter-spacing: 1px;
+}
+
+.news-grid-txt ul li i {
+color: #0a0b3b;
+font-size: 14px;
+font-weight: 500;
+margin-right: 5px;
+}
+
+.news-grid-txt p {
+color: #222;
+font-size: 14px;
+font-weight: 300;
+line-height: 170%;
+letter-spacing: 1.5px;
+border-bottom: 1px solid #ececec;
+padding-bottom: 15px;
+margin-bottom: 25px;
+}
+
+.news-grid-txt a {
+color: #fff;
+background: #0a0b3b;
+padding: 8px 20px;
+border-radius: 50px;
+font-size: 14px;
+font-weight: 300;
+line-height: 30px;
+letter-spacing: 1px;
+text-decoration-line: none;
+transition: .5s;
+}
+
+/*Hover-Section*/
+.news-grid:hover .news-grid-box {
+left: 15px;
+transition: .5s;
+}
+
+.news-grid:hover .news-grid-image img {
+filter: grayscale(1);
+transform: scale(1.1);
+transition: .5s;
+}
+
+.news-grid:hover .news-grid-txt a {
+text-decoration-line: none;
+color: #fff;
+letter-spacing: 2px;
+transition: .5s;
+}
+
+</style>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+<div class="news-wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-lg-4 m-15px-tb">
+                        <div class="news-grid">
+                            <div class="news-grid-image"><img src="News and Events/Main-Thumbsmod.jpg" alt="">
+                                <div class="news-grid-box">
+                                    <h1>11</h1>
+                                    <p>May</p>
+                                </div></div>
+                                <div class="news-grid-txt">
+                                    <span>EVENTS</span>
+                                    <h2>The Kingdom by the sea turns 116th years</h2>
+                                    <ul>
+                                        <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
+                                        <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                    </ul>
+                                    <p>Today marks 116 years since De La Salle College, Colombo, was founded on February 1, 1095.</p>
+                                    <a href="https://www.facebook.com/DeLaSalleCollegeColombo/">Read More...</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-4 m-15px-tb">
+                            <div class="news-grid">
+                                <div class="news-grid-image"><img src="img/dlsd.jpg" alt="">
+                                    <div class="news-grid-box">
+                                        <h1>11</h1>
+                                        <p>Dec</p>
+                                    </div></div>
+                                    <div class="news-grid-txt">
+                                        <span>NEWS</span>
+                                        <h2>Our New College Website Has Been Launched</h2>
+                                        <ul>
+                                            <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
+                                            <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                        </ul>
+                                        <p>we are so excited to announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
+                                        <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-lg-4 m-15px-tb">
+                                <div class="news-grid">
+                                    <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
+                                        <div class="news-grid-box">
+                                            <h1>24</h1>
+                                            <p>Sep</p>
+                                        </div></div>
+                                        <div class="news-grid-txt">
+                                            <span>ALUMNI</span>
+                                            <h2>Heading Will Be Here</h2>
+                                            <ul>
+                                                <li><i class="fa fa-calendar" aria-hidden="true"></i> Sep 24, 2020</li>
+                                                <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                                            </ul>
+                                            <p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+                                            <a href="#">Read More...</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div></div>
+                    
+    </br>
+</br>
+</br>
+
+</br>
+</br>
+</br>
+</br>
    
     <!-- Footer -->
     <footer>
