--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -601,7 +601,7 @@ transition: .5s;
                 <div class="row">
                     <div class="col-md-4 col-lg-4 m-15px-tb">
                         <div class="news-grid">
-                            <div class="news-grid-image"><img src="News and Events/Main-Thumbsmod.jpg" alt="">
+                            <div class="news-grid-image"><img src="../News and Events/Main-Thumbsmod.jpg" alt="">
                                 <div class="news-grid-box">
                                     <h1>11</h1>
                                     <p>May</p>
@@ -620,7 +620,7 @@ transition: .5s;
                         </div>
                         <div class="col-md-4 col-lg-4 m-15px-tb">
                             <div class="news-grid">
-                                <div class="news-grid-image"><img src="img/dlsd.jpg" alt="">
+                                <div class="news-grid-image"><img src="../img/dlsd.jpg" alt="">
                                     <div class="news-grid-box">
                                         <h1>11</h1>
                                         <p>Dec</p>
@@ -633,13 +633,13 @@ transition: .5s;
                                             <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                         </ul>
                                         <p>we are so excited to announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
-                                        <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
+                                        <a href="../news/our-new-college-website-has-been-launched.php.html">Read More...</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-lg-4 m-15px-tb">
                                 <div class="news-grid">
-                                    <div class="news-grid-image"><img src="img/dlsobucrest.jpg" alt="">
+                                    <div class="news-grid-image"><img src="../img/dlsobucrest.jpg" alt="">
                                         <div class="news-grid-box">
                                             <h1>24</h1>
                                             <p>Sep</p>
