--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -508,6 +508,7 @@ margin: -5vw -9vw 2vw;
 
        <blockquote> Contact For any questions, suggestions, feedback or comments, <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" href="mailto:College@delasalle.lk">E-mail us</a>! </blockquote>
         
+       <i class="separate"></i>
     </div>
 </div>
 </div>
