--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -516,6 +516,7 @@ margin: -5vw -9vw 2vw;
 .Blog .separate.alt:before{content:'' !important;display:block;letter-spacing:normal;text-indent:0;height:1px;border-bottom:1px solid rgba(0,0,0,.05) }
             </style>
        <i class="separate"></i>
+        </div>
     </div>
 </div>
 </div>
