--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -600,10 +600,11 @@ color: #6d6d6d;
 
 
 .social-buttons {
-width: auto;
-display: flex;
-align-items: center;
-justify-content: center;
+    width: auto;
+    display: flex;
+    margin: 14px;
+    align-items: center;
+    justify-content: center;
 }
 
 .social-buttons button {
