--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -635,7 +635,7 @@ margin: 0 20px;
       <div class="card-footer">
         <div class="social-buttons">
           <button>
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook"></i>
           </button>
 
           <button>
