--- a/obu.html
+++ b/obu.html
@@ -586,7 +586,7 @@ ul a:hover::after {
         }
         
         </style>
-        <body>
+        <!--body>
           <div class="container">
             <div class="card">
               <div class="card-header">
@@ -614,7 +614,7 @@ ul a:hover::after {
               </div>
             </div>
           </div>
-        </body>
+        </body-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
           <script>
               let tl = gsap.timeline();
