--- a/obu.html
+++ b/obu.html
@@ -861,6 +861,8 @@ ul a:hover::after {
                                     </div>
                                 </div>
                             </div></div>
+</body>
+</section>
                             
     <!--SECTION END-->
         <style>
