--- a/obu.html
+++ b/obu.html
@@ -251,6 +251,7 @@ ul a:hover::after {
                 </div>
             </nav>
         </header>
+    </div>
         <!-- /header -->
         <div style="text-align: center;">
                 <a href="#" target="_blank"-->
